--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <titleWelcome to R Chun's Website</title>
+    <title> Welcome to R Chun's Website</title>
   </head>
   <body>
     <h1>R Chun's Website</h1>
