--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Welcome to R Chun's Website</title>
   </head>
-  <body>
+  <body style="background-color:powderblue;">
     <h1>R Chun's Website</h1>
-    <img src="https://scontent.ftpe8-1.fna.fbcdn.net/v/t1.15752-9/52984142_360294474815312_6037373160767094784_n.jpg?_nc_cat=109&_nc_ht=scontent.ftpe8-1.fna&oh=8542eac77cf76e5d389720ba97c9f251&oe=5D1FD444"width="200" height="300">
+    <img src="https://scontent.ftpe8-1.fna.fbcdn.net/v/t1.15752-9/52984142_360294474815312_6037373160767094784_n.jpg?_nc_cat=109&_nc_ht=scontent.ftpe8-1.fna&oh=8542eac77cf76e5d389720ba97c9f251&oe=5D1FD444"width="300" height="200">
     <p></p>
   </body>
   
