--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Welcome to R Chun's Website</title>
   </head>
   <body style="background-color:powderblue;">
-    <h1 style="color:MediumSeaGreen;">R Chun's Website </h1>
+    <h1 style="color:MediumSeaGreen;text-align:center;">R Chun's Website </h1>
     <img src="https://scontent.ftpe8-1.fna.fbcdn.net/v/t1.15752-9/52984142_360294474815312_6037373160767094784_n.jpg?_nc_cat=109&_nc_ht=scontent.ftpe8-1.fna&oh=8542eac77cf76e5d389720ba97c9f251&oe=5D1FD444"width="300" height="250">
     <p>
       我叫作Pocky,今年剛滿9個月,是個小女生,
