--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head> 
+    
     <meta charset="utf-8">
     <title>Welcome to R Chun's Website</title>
   </head>
   <body style="background-color:powderblue;">
+    <center>
     <h1 style="color:MediumSeaGreen;text-align:center;">R Chun's Website </h1>
     <img src="https://scontent.ftpe8-1.fna.fbcdn.net/v/t1.15752-9/52984142_360294474815312_6037373160767094784_n.jpg?_nc_cat=109&_nc_ht=scontent.ftpe8-1.fna&oh=8542eac77cf76e5d389720ba97c9f251&oe=5D1FD444"width="300" height="250">
-    <pstyle="color:DarkGreen;text-align:center;">
+    <p style="color:MediumSeaGreen;text-align:center;">
       我叫作Pocky，今年剛滿9個月，是個小女生，我喜歡玩球球還有跟其他狗狗玩，平常喜歡跟姊姊玩拔河，我也很喜歡找人玩，很會飛撲!!
     </p>
+    </center>
   </body>
   
 </html>
