--- a/index.html
+++ b/index.html
@@ -44,4 +44,5 @@
   <a style="float:left;"><img border=0 src=图片1.gif></a>
   <a style="float:left;"><img border=0 src=图片1.gif></a>
   <a style="float:left;"><img border=0 src=图片1.gif></a>
+  <img style="display:inline-block" src="https://unsplash.it/400/300?image=0"><img style="display:inline-block" src="https://unsplash.it/400/300?image=0">
 </html>
