--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <center>
     <h1 style="color:MediumSeaGreen;text-align:center;">R Chun's Website </h1>
     <img src="https://scontent.ftpe8-1.fna.fbcdn.net/v/t1.15752-9/52984142_360294474815312_6037373160767094784_n.jpg?_nc_cat=109&_nc_ht=scontent.ftpe8-1.fna&oh=8542eac77cf76e5d389720ba97c9f251&oe=5D1FD444"width="300" height="250">
-    <p face="標楷體"style="color:MediumSeaGreen;text-align:center;">
+    <p face="標楷體"style="color:MediumSeaGreen;text-align:center;sfont-size:160%;">
       我叫作Pocky，今年剛滿9個月，是個小女生，我喜歡玩球球還有跟其他狗狗玩，平常喜歡跟姊姊玩拔河，我也很喜歡找人玩，很會飛撲!!
     </p>
   </center> 
   </body>
-  <p face="標楷體"style="color:MediumSeaGreen;text-align:center;">
+  <p face="標楷體"style="color:MediumSeaGreen;text-align:center;font-size:200%;">
     各種可愛的我
   </p>
   <a style="float:left;"><img border=0 src="https://scontent.ftpe8-2.fna.fbcdn.net/v/t1.15752-9/53778027_595799870889819_4144888039027507200_n.jpg?_nc_cat=101&_nc_ht=scontent.ftpe8-2.fna&oh=332980968548950d3760245d41a2a1a7&oe=5D04D19E"width="200" height="250"></a>
