--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <center>
     <h1 style="color:MediumSeaGreen;text-align:center;">R Chun's Website </h1>
     <img src="https://scontent.ftpe8-1.fna.fbcdn.net/v/t1.15752-9/52984142_360294474815312_6037373160767094784_n.jpg?_nc_cat=109&_nc_ht=scontent.ftpe8-1.fna&oh=8542eac77cf76e5d389720ba97c9f251&oe=5D1FD444"width="300" height="250">
-    <p face="標楷體"style="color:MediumSeaGreen;text-align:center;sfont-size:160%;">
+    <p face="標楷體"style="color:Green;text-align:center;sfont-size:160%;">
       我叫作Pocky，今年剛滿9個月，是個小女生，我喜歡玩球球還有跟其他狗狗玩，平常喜歡跟姊姊玩拔河，我也很喜歡找人玩，很會飛撲!!
     </p>
   </center> 
@@ -17,15 +17,26 @@
   <h2 face="標楷體"style="color:MediumSeaGreen;text-align:center;font-size:200%;">
     各種可愛的我
   </h2>
-  <span>
+  
   <a style="float:left;"><img border=0 src="https://scontent.ftpe8-2.fna.fbcdn.net/v/t1.15752-9/53778027_595799870889819_4144888039027507200_n.jpg?_nc_cat=101&_nc_ht=scontent.ftpe8-2.fna&oh=332980968548950d3760245d41a2a1a7&oe=5D04D19E"width="200" height="250"></a>
-  </span>
+ <span>
   <a style="float:left;"><img border=0 src="https://scontent.ftpe8-1.fna.fbcdn.net/v/t1.15752-9/53810892_1452403901568583_5156019028082294784_n.jpg?_nc_cat=105&_nc_ht=scontent.ftpe8-1.fna&oh=3a37a96970843557cb9b7787054a961c&oe=5D12D81E"width="200" height="250"></a>
+ </span>
+  <span>
   <a style="float:left;"><img border=0 src="https://scontent.ftpe8-3.fna.fbcdn.net/v/t1.15752-9/53821034_2011603295542081_5962422094506491904_n.jpg?_nc_cat=106&_nc_ht=scontent.ftpe8-3.fna&oh=4a3cfa327f254367da2f4df6069c0241&oe=5D4E7E94"width="200" height="250"></a>
+  </span>
+  <span>
   <a style="float:left;"><img border=0 src="https://scontent.ftpe8-3.fna.fbcdn.net/v/t1.15752-9/54362943_2316705635212412_5271779559329497088_n.jpg?_nc_cat=107&_nc_ht=scontent.ftpe8-3.fna&oh=3444f5f080aa789c986a157623a11b40&oe=5D0FB645"width="200" height="250"></a>
+  </span>
+  <span>
   <a style="float:left;"><img border=0 src="https://scontent.ftpe8-3.fna.fbcdn.net/v/t1.15752-9/54524204_2785220215035496_3685278490556366848_n.jpg?_nc_cat=107&_nc_ht=scontent.ftpe8-3.fna&oh=1fcf828d8077ec6f069b7c340386f30a&oe=5D242388"width="200" height="250"></a>
+  </span>
+  <span>
   <a style="float:left;"><img border=0 src="https://scontent.ftpe8-3.fna.fbcdn.net/v/t1.15752-9/53694023_248694489256813_8406592033090699264_n.jpg?_nc_cat=107&_nc_ht=scontent.ftpe8-3.fna&oh=637cd279be08ffe0f312bb39496f0561&oe=5D4ED599"width="200" height="250"></a>
+  </span>
+  <span>
   <a style="float:left;"><img border=0 src="https://scontent.ftpe8-2.fna.fbcdn.net/v/t1.15752-9/54220519_248713089343440_4371323460811489280_n.jpg?_nc_cat=103&_nc_ht=scontent.ftpe8-2.fna&oh=67dcf07cfd26a5c614596a349be9cd0e&oe=5D17DF32"width="200" height="250"></a>
+  </span>
   <a style="float:left;"><img border=0 src="https://scontent.ftpe7-2.fna.fbcdn.net/v/t1.15752-9/53857794_331381967502228_4149369193155788800_n.jpg?_nc_cat=104&_nc_ht=scontent.ftpe7-2.fna&oh=4a2e1bbae63311932695e3409ec27dbb&oe=5D1FDECF"width="200" height="250"></a>
 
 </html>
