--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head> 
-    
+ <head> 
+ <style>
+  .city {
+  background-color: LemonChiffon ;
+  color: white;
+  padding: 10px;
+} 
+   </style>
     <meta charset="utf-8">
     <title>Welcome to R Chun's Website</title>
   </head>
@@ -14,7 +20,7 @@
     </p>
   </center> 
   </body>
-  <h2 face="標楷體"style="color:MediumSeaGreen;text-align:center;font-size:200%;">
+  <h2 class="city"style="text-align:center;font-size:200%;">
     各種可愛的我
   </h2>
   
