--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <style>
   .city {
   background-color: LemonChiffon ;
-  color: white;
+  color: LightSkyBlue ;
   padding: 10px;
 } 
    </style>
