--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </p>
   <h2 class="city"style="text-align:center;font-size:200%;">我的基本資料</h2>
     <p style="color:Green;text-align:center;sfont-size:160%;">
-<div>姓名 : 林 Pocky</div>
+<div style="color:Green;text-align:center;sfont-size:160%;">姓名 : 林 Pocky</div>
 <div>年齡 : 9個月</div>
 <div>體重 : 2X 公斤(我很大隻)</div>
 <div>身高 : 14X cm(站起來很高)</div>
