--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
   <body style="background-color:powderblue;">
     <center>
     <h1 style="color:MediumSeaGreen;text-align:center;">R Chun's Website </h1>
-    <img src="https://scontent.ftpe8-1.fna.fbcdn.net/v/t1.15752-9/52984142_360294474815312_6037373160767094784_n.jpg?_nc_cat=109&_nc_ht=scontent.ftpe8-1.fna&oh=8542eac77cf76e5d389720ba97c9f251&oe=5D1FD444"width="300" height="250">
+    <img src="https://scontent.ftpe8-1.fna.fbcdn.net/v/t1.15752-9/52984142_360294474815312_6037373160767094784_n.jpg?_nc_cat=109&_nc_ht=scontent.ftpe8-1.fna&oh=8542eac77cf76e5d389720ba97c9f251&oe=5D1FD444"width="400" height="350">
     <p style="color:Green;text-align:center;sfont-size:160%;">
       我叫作Pocky，今年剛滿9個月，是個小女生，我喜歡玩球球還有跟其他狗狗玩，平常喜歡跟姊姊玩拔河，我也很喜歡找人玩，很會飛撲!!
     </p>
   <h2 class="city"style="text-align:center;font-size:200%;">我的基本資料</h2>
-    <p style="color:Green;text-align:center;sfont-size:160%;">
+<p>
 <div style="color:Green;text-align:center;sfont-size:160%;">姓名 : 林 Pocky</div>
-<div>年齡 : 9個月</div>
-<div>體重 : 2X 公斤(我很大隻)</div>
-<div>身高 : 14X cm(站起來很高)</div>
-<div>家中排行 : 老四</div>
-<div>最喜歡的食物 : 麻麻煮的排骨</div>
+<div style="color:Green;text-align:center;sfont-size:160%;">年齡 : 9個月</div>
+<div style="color:Green;text-align:center;sfont-size:160%;">體重 : 2X 公斤(我很大隻)</div>
+<div style="color:Green;text-align:center;sfont-size:160%;">身高 : 14X cm(站起來很高)</div>
+<div style="color:Green;text-align:center;sfont-size:160%;">家中排行 : 老四</div>
+<div style="color:Green;text-align:center;sfont-size:160%;">最喜歡的食物 : 麻麻煮的排骨</div>
 </p>
   </center> 
   </body>
