--- a/index.html
+++ b/index.html
@@ -55,4 +55,5 @@
   <img style="float:left;"><img border=0 src="https://scontent.ftpe7-2.fna.fbcdn.net/v/t1.15752-9/53857794_331381967502228_4149369193155788800_n.jpg?_nc_cat=104&_nc_ht=scontent.ftpe7-2.fna&oh=4a2e1bbae63311932695e3409ec27dbb&oe=5D1FDECF"width="200" height="250"></a>
 <video width="320" height="240" controls>
  <source src="video-1552619543.mp4" type="video/mp4">
+ </video>
 </html>
