--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
   <span>
   <img style="float:left;"><img border=0 src="https://scontent.ftpe8-2.fna.fbcdn.net/v/t1.15752-9/54220519_248713089343440_4371323460811489280_n.jpg?_nc_cat=103&_nc_ht=scontent.ftpe8-2.fna&oh=67dcf07cfd26a5c614596a349be9cd0e&oe=5D17DF32"width="200" height="250"></a>
   </span>
-  <img style="float:left;"><img border=0 src="https://scontent.ftpe7-2.fna.fbcdn.net/v/t1.15752-9/53857794_331381967502228_4149369193155788800_n.jpg?_nc_cat=104&_nc_ht=scontent.ftpe7-2.fna&oh=4a2e1bbae63311932695e3409ec27dbb&oe=5D1FDECF"width="200" height="250"></a>
+  <div><img style="float:left;"><img border=0 src="https://scontent.ftpe7-2.fna.fbcdn.net/v/t1.15752-9/53857794_331381967502228_4149369193155788800_n.jpg?_nc_cat=104&_nc_ht=scontent.ftpe7-2.fna&oh=4a2e1bbae63311932695e3409ec27dbb&oe=5D1FDECF"width="200" height="250"></a>
+</div>
 <video width="320" height="240" controls>
- <source src="video-1552619543.mp4" type="video/mp4">
+ <source src="https://video.ftpe7-3.fna.fbcdn.net/v/t42.3356-2/55290270_851913445145878_8284221572944756736_n.mp4/video-1552619543.mp4?_nc_cat=102&vabr=2707626&_nc_ht=video.ftpe7-3.fna&oh=f6460712ff01449dbf23b377a578e21b&oe=5C8FDFE3&dl=1">
  </video>
 </html>
