--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
   </span>
   <div><img style="float:left;"><img border=0 src="https://scontent.ftpe7-2.fna.fbcdn.net/v/t1.15752-9/53857794_331381967502228_4149369193155788800_n.jpg?_nc_cat=104&_nc_ht=scontent.ftpe7-2.fna&oh=4a2e1bbae63311932695e3409ec27dbb&oe=5D1FDECF"width="200" height="250"></a>
 </div>
-<video width="320" height="240" controls>
+<h2 class="city"style="text-align:center;font-size:200%;">
+    我的小日常
+  </h2>
+<video width="640" height="560" controls>
  <source src="https://video.ftpe7-3.fna.fbcdn.net/v/t42.3356-2/55290270_851913445145878_8284221572944756736_n.mp4/video-1552619543.mp4?_nc_cat=102&vabr=2707626&_nc_ht=video.ftpe7-3.fna&oh=f6460712ff01449dbf23b377a578e21b&oe=5C8FDFE3&dl=1">
  </video>
 <video width="640" height="560" controls>
