--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
   <span>
   <img style="float:left;"><img border=0 src="https://scontent.ftpe8-2.fna.fbcdn.net/v/t1.15752-9/54220519_248713089343440_4371323460811489280_n.jpg?_nc_cat=103&_nc_ht=scontent.ftpe8-2.fna&oh=67dcf07cfd26a5c614596a349be9cd0e&oe=5D17DF32"width="200" height="250"></a>
   </span>
-  <div><img style="float:left;"><img border=0 src="https://scontent.ftpe7-2.fna.fbcdn.net/v/t1.15752-9/53857794_331381967502228_4149369193155788800_n.jpg?_nc_cat=104&_nc_ht=scontent.ftpe7-2.fna&oh=4a2e1bbae63311932695e3409ec27dbb&oe=5D1FDECF"width="200" height="250"></a>
-</div>
+  
 <h2 class="city"style="text-align:center;font-size:200%;">
     我的小日常
   </h2>
@@ -63,4 +62,6 @@
 <video width="640" height="560" controls>
  <source src="https://video.ftpe8-1.fna.fbcdn.net/v/t42.3356-2/55292063_2166036960121030_1019373554551903391_n.mp4/video-1552619537.mp4?_nc_cat=108&vabr=1464200&_nc_ht=video.ftpe8-1.fna&oh=6253de4f86c2770378eb396208392d83&oe=5C901175&dl=1">
  </video>
+<div><img src="https://scontent.ftpe7-2.fna.fbcdn.net/v/t1.15752-9/53857794_331381967502228_4149369193155788800_n.jpg?_nc_cat=104&_nc_ht=scontent.ftpe7-2.fna&oh=4a2e1bbae63311932695e3409ec27dbb&oe=5D1FDECF"width="300" height="450"></a>
+</div>
 </html>
