--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 </p>
   </center> 
   </body>
+<center>
   <h2 class="city"style="text-align:center;font-size:200%;">
     各種可愛的我
   </h2>
@@ -52,7 +53,7 @@
   <span>
   <img style="float:left;"><img border=0 src="https://scontent.ftpe8-2.fna.fbcdn.net/v/t1.15752-9/54220519_248713089343440_4371323460811489280_n.jpg?_nc_cat=103&_nc_ht=scontent.ftpe8-2.fna&oh=67dcf07cfd26a5c614596a349be9cd0e&oe=5D17DF32"width="200" height="250"></a>
   </span>
-  
+  </>
 <h2 class="city"style="text-align:center;font-size:200%;">
     我的小日常
   </h2>
