--- a/index.html
+++ b/index.html
@@ -67,18 +67,14 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-  $("#hide").click(function(){
-    $("div").hide();
-  });
   $("#show").click(function(){
     $("div").show();
   });
 });
 </script>
 </head>
-<p>小彩蛋</p>
+<p class="city"style="text-align:center;font-size:200%;">小彩蛋</p>
 <body>
-<button id="hide">Hide</button>
 <button id="show">Show</button>
 <div><img src="https://scontent.ftpe7-2.fna.fbcdn.net/v/t1.15752-9/53857794_331381967502228_4149369193155788800_n.jpg?_nc_cat=104&_nc_ht=scontent.ftpe7-2.fna&oh=4a2e1bbae63311932695e3409ec27dbb&oe=5D1FDECF"width="300" height="450"></a>
 </div>
