--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ $(document).ready(function(){
 });
 </script>
 </head>
-<p class="city"style="text-align:center;font-size:200%;">小彩蛋</p>
+<p style="color:Green;text-align:center;sfont-size:160%;">小彩蛋</p>
 <body>
  <button id="hide">Hide</button>
 <button id="show">Show</button>
