--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@ $(document).ready(function(){
 });
 </script>
 </head>
-<p style="color:Green;text-align:center;sfont-size:160%;">小彩蛋</p>
+<p style="color:Green;text-align:center;sfont-size:160%;">最可愛的一張!</p>
 <body>
- <button id="hide">Hide</button>
-<button id="show">Show</button>
+ <button id="不想看">Hide</button>
+<button id="看看我">Show</button>
 <div><img src="https://scontent.ftpe7-2.fna.fbcdn.net/v/t1.15752-9/53857794_331381967502228_4149369193155788800_n.jpg?_nc_cat=104&_nc_ht=scontent.ftpe7-2.fna&oh=4a2e1bbae63311932695e3409ec27dbb&oe=5D1FDECF"width="300" height="450"></a>
 </div>
 </body>
