--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ $(document).ready(function(){
 </head>
 <p style="color:Green;text-align:center;sfont-size:160%;">最可愛的一張!</p>
 <body>
- <button id="Hide">不想看</button>
-<button id="Show">看看</button>
+ <button id="#hide">不想看</button>
+<button id="#show">看看</button>
 <div><img src="https://scontent.ftpe7-2.fna.fbcdn.net/v/t1.15752-9/53857794_331381967502228_4149369193155788800_n.jpg?_nc_cat=104&_nc_ht=scontent.ftpe7-2.fna&oh=4a2e1bbae63311932695e3409ec27dbb&oe=5D1FDECF"width="300" height="450"></a>
 </div>
 </body>
